Improve processing OpenSearch data types. Fix using subfields for `text` type. (#299)
* Add `text` type.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Simplify implementation.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Add docs.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Add IT.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Fix type resolution in IT.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Code clean up and comment update.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Minor clean up.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Update `ExprType` and tests.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Minor fix in docs.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Finalize implementation and tests.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Smart subfield selection.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

* Address PR feedback.

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>

---------

Signed-off-by: Yury-Fridlyand <yury.fridlyand@improving.com>