@@ -31,7 +31,6 @@ import static org.opensearch.sql.opensearch.utils.Utils.sort;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.AbstractMap;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -100,9 +99,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER))),
-            Arrays.asList(named("name", ref("name", STRING)))));
+            List.of(
+                named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))),
+            List.of(named("name", ref("name", STRING)))));
   }
 
   @Test
@@ -133,9 +132,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER))),
-            Arrays.asList(named("name", ref("name", STRING))),
+            List.of(
+                named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))),
+            List.of(named("name", ref("name", STRING))),
             sort(ref("name", STRING), Sort.SortOption.DEFAULT_DESC)
         ));
   }
@@ -143,9 +142,9 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_field_reference() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
-            named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER))),
-            Arrays.asList(named("name", ref("name", STRING)))),
+        buildTypeMapping(List.of(
+            named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))),
+            List.of(named("name", ref("name", STRING)))),
         containsInAnyOrder(
             map("avg(age)", OpenSearchDataType.of(INTEGER)),
             map("name", OpenSearchDataType.of(STRING))
@@ -155,10 +154,10 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_datetime_type() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
                 named("avg(datetime)",
-                    new AvgAggregator(Arrays.asList(ref("datetime", DATETIME)), DATETIME))),
-            Arrays.asList(named("datetime", ref("datetime", DATETIME)))),
+                    new AvgAggregator(List.of(ref("datetime", DATETIME)), DATETIME))),
+            List.of(named("datetime", ref("datetime", DATETIME)))),
         containsInAnyOrder(
             map("avg(datetime)", OpenSearchDateType.of(DATETIME)),
             map("datetime", OpenSearchDateType.of(DATETIME))
@@ -168,10 +167,10 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_timestamp_type() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
                 named("avg(timestamp)",
-                    new AvgAggregator(Arrays.asList(ref("timestamp", TIMESTAMP)), TIMESTAMP))),
-            Arrays.asList(named("timestamp", ref("timestamp", TIMESTAMP)))),
+                    new AvgAggregator(List.of(ref("timestamp", TIMESTAMP)), TIMESTAMP))),
+            List.of(named("timestamp", ref("timestamp", TIMESTAMP)))),
         containsInAnyOrder(
             map("avg(timestamp)", OpenSearchDateType.of()),
             map("timestamp", OpenSearchDateType.of())
@@ -181,10 +180,10 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_date_type() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
                 named("avg(date)",
-                    new AvgAggregator(Arrays.asList(ref("date", DATE)), DATE))),
-            Arrays.asList(named("date", ref("date", DATE)))),
+                    new AvgAggregator(List.of(ref("date", DATE)), DATE))),
+            List.of(named("date", ref("date", DATE)))),
         containsInAnyOrder(
             map("avg(date)", OpenSearchDateType.of(DATE)),
             map("date", OpenSearchDateType.of(DATE))
@@ -194,10 +193,10 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_time_type() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
                 named("avg(time)",
-                    new AvgAggregator(Arrays.asList(ref("time", TIME)), TIME))),
-            Arrays.asList(named("time", ref("time", TIME)))),
+                    new AvgAggregator(List.of(ref("time", TIME)), TIME))),
+            List.of(named("time", ref("time", TIME)))),
         containsInAnyOrder(
             map("avg(time)", OpenSearchDateType.of(TIME)),
             map("time", OpenSearchDateType.of(TIME))
@@ -214,7 +213,7 @@ class AggregationQueryBuilderTest {
             + "      \"sources\" : [ {%n"
             + "        \"name\" : {%n"
             + "          \"terms\" : {%n"
-            + "            \"field\" : \"name.keyword\",%n"
+            + "            \"field\" : \"name.words\",%n"
             + "            \"missing_bucket\" : true,%n"
             + "            \"missing_order\" : \"first\",%n"
             + "            \"order\" : \"asc\"%n"
@@ -232,18 +231,17 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER))),
-            Arrays.asList(named("name", ref("name", OpenSearchTextType.of(Map.of("words",
+            List.of(named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))),
+            List.of(named("name", ref("name", OpenSearchTextType.of(Map.of("words",
                 OpenSearchDataType.of(OpenSearchDataType.MappingType.Keyword))))))));
   }
 
   @Test
   void should_build_type_mapping_for_field_reference_of_keyword() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
-            named("avg(age)", new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER))),
-            Arrays.asList(named("name", ref("name", STRING)))),
+        buildTypeMapping(List.of(
+            named("avg(age)", new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER))),
+            List.of(named("name", ref("name", STRING)))),
         containsInAnyOrder(
             map("avg(age)", OpenSearchDataType.of(INTEGER)),
             map("name", OpenSearchDataType.of(STRING))
@@ -288,10 +286,10 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named("avg(balance)", new AvgAggregator(
-                    Arrays.asList(DSL.abs(ref("balance", INTEGER))), INTEGER))),
-            Arrays.asList(named("age", DSL.asin(ref("age", INTEGER))))));
+                    List.of(DSL.abs(ref("balance", INTEGER))), INTEGER))),
+            List.of(named("age", DSL.asin(ref("age", INTEGER))))));
   }
 
   @Test
@@ -341,10 +339,10 @@ class AggregationQueryBuilderTest {
   @Test
   void should_build_type_mapping_for_expression() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
             named("avg(balance)", new AvgAggregator(
-                Arrays.asList(DSL.abs(ref("balance", INTEGER))), INTEGER))),
-            Arrays.asList(named("age", DSL.asin(ref("age", INTEGER))))),
+                List.of(DSL.abs(ref("balance", INTEGER))), INTEGER))),
+            List.of(named("age", DSL.asin(ref("age", INTEGER))))),
         containsInAnyOrder(
             map("avg(balance)", OpenSearchDataType.of(INTEGER)),
             map("age", OpenSearchDataType.of(DOUBLE))
@@ -362,9 +360,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
+            List.of(
                 named("avg(balance)", new AvgAggregator(
-                    Arrays.asList(ref("balance", INTEGER)), INTEGER))),
+                    List.of(ref("balance", INTEGER)), INTEGER))),
             Collections.emptyList()));
   }
 
@@ -394,8 +392,8 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(named("avg(age) filter(where age > 34)",
-                new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)
+            List.of(named("avg(age) filter(where age > 34)",
+                new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER)
                     .condition(DSL.greater(ref("age", INTEGER), literal(20))))),
             Collections.emptyList()));
   }
@@ -443,18 +441,18 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(named("avg(age) filter(where age > 34)",
-                new AvgAggregator(Arrays.asList(ref("age", INTEGER)), INTEGER)
+            List.of(named("avg(age) filter(where age > 34)",
+                new AvgAggregator(List.of(ref("age", INTEGER)), INTEGER)
                     .condition(DSL.greater(ref("age", INTEGER), literal(20))))),
-            Arrays.asList(named(ref("gender", OpenSearchDataType.of(STRING))))));
+            List.of(named(ref("gender", OpenSearchDataType.of(STRING))))));
   }
 
   @Test
   void should_build_type_mapping_without_bucket() {
     assertThat(
-        buildTypeMapping(Arrays.asList(
+        buildTypeMapping(List.of(
             named("avg(balance)", new AvgAggregator(
-                Arrays.asList(ref("balance", INTEGER)), INTEGER))),
+                List.of(ref("balance", INTEGER)), INTEGER))),
             Collections.emptyList()),
         containsInAnyOrder(
             map("avg(balance)", OpenSearchDataType.of(INTEGER))
@@ -490,9 +488,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER))),
-            Arrays.asList(named(span(ref("age", INTEGER), literal(10), "")))));
+            List.of(
+                named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER))),
+            List.of(named(span(ref("age", INTEGER), literal(10), "")))));
   }
 
   @Test
@@ -529,10 +527,10 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER)),
-                named("avg(b)", new AvgAggregator(Arrays.asList(ref("b", INTEGER)), INTEGER))),
-            Arrays.asList(named(span(ref("age", INTEGER), literal(10), "")))));
+            List.of(
+                named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER)),
+                named("avg(b)", new AvgAggregator(List.of(ref("b", INTEGER)), INTEGER))),
+            List.of(named(span(ref("age", INTEGER), literal(10), "")))));
   }
 
   @Test
@@ -564,9 +562,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER))),
-            Arrays.asList(named(span(ref("timestamp", TIMESTAMP), literal(1), "h")))));
+            List.of(
+                named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER))),
+            List.of(named(span(ref("timestamp", TIMESTAMP), literal(1), "h")))));
   }
 
   @Test
@@ -598,9 +596,9 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER))),
-            Arrays.asList(named(span(ref("date", DATE), literal(1), "w")))));
+            List.of(
+                named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER))),
+            List.of(named(span(ref("date", DATE), literal(1), "w")))));
   }
 
   @Test
@@ -632,17 +630,17 @@ class AggregationQueryBuilderTest {
             + "  }%n"
             + "}"),
         buildQuery(
-            Arrays.asList(
-                named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER))),
-            Arrays.asList(named(span(ref("age", INTEGER), literal(1), "")))));
+            List.of(
+                named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER))),
+            List.of(named(span(ref("age", INTEGER), literal(1), "")))));
   }
 
   @Test
   void invalid_unit() {
     assertThrows(IllegalStateException.class, () -> buildQuery(
-        Arrays.asList(
-            named("count(a)", new CountAggregator(Arrays.asList(ref("a", INTEGER)), INTEGER))),
-        Arrays.asList(named(span(ref("age", INTEGER), literal(1), "invalid_unit")))));
+        List.of(
+            named("count(a)", new CountAggregator(List.of(ref("a", INTEGER)), INTEGER))),
+        List.of(named(span(ref("age", INTEGER), literal(1), "invalid_unit")))));
   }
 
   @SneakyThrows
